8195776: [x86,sparc] A row of minor fixes and enhancements

Reviewed-by: kvn